--- a/templates/postgres/list.html
+++ b/templates/postgres/list.html
@@ -19,7 +19,7 @@
                     <td>{{database.username}}</td>
                     <td>
                         <span class="blur-group">
-                            <span class="blur-text">
+                            <span class="blur-text blured">
                                 {{database.password}}
                             </span>
                             <i class="bi bi-eye remove-blur pointer"></i>
