--- a/templates/psql/list.html
+++ b/templates/psql/list.html
@@ -18,20 +18,22 @@
                     <td>{{database.name}}</td>
                     <td>{{database.username}}</td>
                     <td>
-                        <span class="blur-group">
-                            <span class="blur-text blured">
-                                {{database.password}}
-                            </span>
-                            <i class="bi bi-eye remove-blur pointer"></i>
-                        </span>
-                        <i class="bi bi-clipboard copy-this pointer" data-text="{{database.password}}" data-message="{% trans 'Password copied' %}"></i>
+                        <div class="blur-group input-group input-group-sm">
+                            <input class="blur-text blured-text form-control" value="{{database.password}}" readonly>
+                            <button type="button" class="remove-blur btn btn-warning" data-text="{{database.password}}">
+                                <i class="bi bi-eye"></i>
+                            </button>
+                            <button type="button" class="copy-this pointer btn btn-dark" data-text="{{database.password}}" data-message="{% trans 'Password copied' %}">
+                                <i class="bi bi-clipboard"></i>
+                            </button>
+                        </div>
                     </td>
                     <td class="text-end">
-                        <a href="{% url 'postgres_database_download' database.serial %}" target="_blank" class="btn btn-success btn-sm rounded-pill">
+                        <a href="{% url 'psql_database_download' database.serial %}" target="_blank" class="btn btn-success btn-sm rounded-pill">
                             <i class="bi bi-download"></i>
                             {% trans 'Download' %}
                         </a>
-                        <a href="{% url 'postgres_database_delete' database.serial %}" class="btn btn-danger btn-sm rounded-pill" onclick="if(!confirm('{% trans 'Do you wand delete!\n This step cannot be undo' %}'))return false;">
+                        <a href="{% url 'psql_database_delete' database.serial %}" class="btn btn-danger btn-sm rounded-pill" onclick="if(!confirm('{% trans 'Do you wand delete!\n This step cannot be undo' %}'))return false;">
                             <i class="bi bi-trash"></i>
                             {% trans 'Delete' %}
                         </a>
