--- a/templates/base.html
+++ b/templates/base.html
@@ -66,6 +66,7 @@
 
 <script src="{% static 'sweetalert2.js' %}"></script>
 <script src="{% static 'bootstrap/js/bootstrap.bundle.min.js' %}"></script>
+<script src="{% static 'scripts.js' %}"></script>
 
 {% include 'inc/preloader.html' %}
 {% include 'inc/scripts.html' %}
