--- a/templates/app/list.html
+++ b/templates/app/list.html
@@ -87,10 +87,10 @@
     jQuery('.app-user-form-toggle').click(function(){
         form = jQuery('.app-user-form.'+jQuery(this).data('app'))
         if(form.is(':visible')) {
-            form.hide()
+            form.hide();
         }else{
-            jQuery('.app-user-form').hide()
-            form.show()
+            jQuery('.app-user-form').hide();
+            form.show();
         }
-    })
+    });
 </script>
