--- a/templates/inc/scripts.html
+++ b/templates/inc/scripts.html
@@ -2,7 +2,7 @@
 
 <script>
 
-    jQuery('[href="{{request.path}}"]').addClass('fw-bold')
+    jQuery('[href="{{request.path}}"]').addClass('fw-bold');
 
     function open_link_confirm(u){
         Swal.fire({
@@ -13,71 +13,44 @@
             denyButtonText: '{% trans "Cancel" %}',
         }).then((result) => {
             if (result.isConfirmed) {
-                jQuery('.loading-preloader').show()
+                jQuery('.loading-preloader').show();
                 location.href = u
             }else if(result.isDenied) {
                 return false
             }
-        })
+        });
     }
 
     function copy_this(text){
-        navigator.clipboard.writeText(text)
+        navigator.clipboard.writeText(text);
         const Toast = Swal.mixin({
-          toast: true,
-          position: 'top',
-          showConfirmButton: false,
-          timer: 3000,
-          timerProgressBar: true,
-          didOpen: (toast) => {
-            toast.addEventListener('mouseenter', Swal.stopTimer)
-            toast.addEventListener('mouseleave', Swal.resumeTimer)
-          }
-        })
+              toast: true,
+              position: 'top',
+              showConfirmButton: false,
+              timer: 3000,
+              timerProgressBar: true,
+              didOpen: (toast) => {
+                toast.addEventListener('mouseenter', Swal.stopTimer);
+                toast.addEventListener('mouseleave', Swal.resumeTimer);
+              }
+        });
 
         Toast.fire({
           icon: 'success',
           title: '{% trans "Text copied" %}'
-        })
+        });
     }
 
-    jQuery('.copy-this').click(function(e){
-
-        const Toast = Swal.mixin({
-          toast: true,
-          position: 'top',
-          showConfirmButton: false,
-          timer: 3000,
-          timerProgressBar: true,
-          didOpen: (toast) => {
-            toast.addEventListener('mouseenter', Swal.stopTimer)
-            toast.addEventListener('mouseleave', Swal.resumeTimer)
-          }
-        })
-
-        navigator.clipboard.writeText(jQuery(this).data('text'))
-        .then(() => {
-            Toast.fire({
-              icon: 'success',
-              title: jQuery(this).data('message')
-            })
-        })
-        .catch((error) => {
-            alert("Could not copy text: ", error);
-        });
-
-    })
-
     jQuery('.remove-blur').click(function(e){
-        blured = jQuery(this).parents('.blur-group').find('.blur-text')
+        blured = jQuery(this).parents('.blur-group').find('.blur-text');
         if(blured.hasClass('blured-text')){
-            blured.removeClass('blured-text')
+            blured.removeClass('blured-text');
         }else{
-            blured.addClass('blured-text')
+            blured.addClass('blured-text');
         }
-    })
+    });
 
     jQuery('.preloader-form').submit(function(e){
-        jQuery('.loading-preloader').show()
-    })
+        jQuery('.loading-preloader').show();
+    });
 </script>
